--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <img src="home-2.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption">
             <h5>Architectural Excellence and Innovation</h5>
-            <p>True Construction stands at the forefront of architectural excellence and innovation. We collaborate with renowned architects and designers to create visionary spaces that inspire and captivate. <br> Whether it's a contemporary masterpiece or a timeless design, we embrace innovative concepts and technologies to push the boundaries of what is possible in the construction realm.</p>
+            <p>True Construction stands at the forefront of architectural excellence and innovation. We collaborate with renowned architects and designers to create visionary spaces.<br>We embrace innovative concepts and technologies to push the boundaries of what is possible in the construction realm.</p>
             <p><a href="#" class="btn btn-warning mt-3">Learn more</a></p>          </div>
         </div>
         <div class="carousel-item">
@@ -110,7 +110,7 @@
 
                 🏆 Building a Legacy of Excellence 🏢 <br> 
                 [Stookyrides] <br>
-                [ https://www.linkedin.com/in/kalpa-das-08a98b1b1/ | 6290271947]</p>
+                [ <a href="url">https://shorturl.at/aczA6</a> / 6290271947]</p>
               <a href="#" class="btn btn-warning">Learn more</a>
             </div>
           </div>
@@ -161,7 +161,7 @@
             <div class="card text-white text-center bg-dark pb-2">
               <div class="card-body">
                 <i class="bi bi-playstation"></i>                <h3 class="card-title">Integrity</h3>
-                <p class="lead">At Stookyrides, integrity is at the core of everything we do. We believe that acting with honesty, transparency, and ethical behavior is paramount to building lasting relationships with our clients, partners, and stakeholders.</p>
+                <p class="lead">At Stookyrides, integrity is at the core of everything we do. We believe that acting with honesty, transparency, and ethical behavior is paramount to building lasting relationships with our clients, partners, and stakeholders#IntegrityMatters .</p>
                 <button class="btn btn-warning text-dark">Read more</button>
                 
               </div>
@@ -197,7 +197,7 @@
                 <img src="project-1.jpg" alt="" class="img-fluid">
                </div> 
                <h3 class="card-title">Building for a Sustainable Future </h3>
-               <p class="lead">At Stookyrides, we take pride in our exceptional work of creating magnificent buildings that leave a lasting impression. With meticulous attention to detail and a passion for architectural brilliance, we bring dreams to life, one building at a time.</p>
+               <p class="lead">At Stookyrides, we take pride in our exceptional work of creating magnificent buildings that leave a lasting impression. With meticulous attention , we bring dreams to life.</p>
                <button class="btn bg-warning text-dark">Learn more</button>
               </div>
             </div>
@@ -210,7 +210,7 @@
                 <img src="project-2.jpg" alt="" class="img-fluid">
                </div> 
                <h3 class="card-title">Unleashing Architectural Marvels</h3>
-               <p class="lead">From sleek and modern structures to timeless and classical designs, we craft buildings that stand as testaments to our dedication and expertise. Each project we undertake is approached with creativity and innovation, resulting in breathtaking spaces that inspire awe.</p>
+               <p class="lead">From sleek and modern structures ,we craft buildings that stand as testaments to our dedication and expertise. Each project we undertake is approached with creativity.</p>
                <button class="btn bg-warning text-dark">Learn more</button>
               </div>
             </div>
@@ -223,7 +223,7 @@
                 <img src="project-3.jpg" alt="" class="img-fluid">
                </div> 
                <h3 class="card-title">Precision and Craftsmanship</h3>
-               <p class="lead">We believe that true beauty lies in the details. Our skilled craftsmen and construction team work diligently, ensuring the highest quality in every aspect of the building process. From the foundation to the finishing touches, we leave no stone unturned in delivering excellence.</p>
+               <p class="lead">We believe that true beauty lies in the details. Our skilled craftsmen and construction team work diligently, ensuring the highest quality in every aspect of the building process.</p>
                <button class="btn bg-warning text-dark">Learn more</button>
               </div>
             </div>
@@ -305,7 +305,7 @@
               <div class="card-body">
                 <img src="team-6.jpg" alt="" class="img-fluid rounded-circle">
                 <h3 class="card-title py-2">Miss Cary: The Sustainability Champion</h3>
-                <p class="card-text">Passionate about creating a greener future, Miss Carry is our sustainability advocate. They integrate environmentally friendly practices into our projects, championing energy efficiency and eco-conscious solutions. With their expertise, we build with a conscience, leaving a positive impact on both the environment and our communities.</p>
+                <p class="card-text">Passionate about creating a greener future, Miss Carry is our sustainability advocate. They integrate environmentally friendly practices into our projects, championing energy efficiency and eco-conscious solutions. We build with a conscience, leaving a positive impact on both the environment and our communities.</p>
 
                 <p class="socials">
                   <i class="bi bi-twitter text-dark mx-1"></i>
